# Advanced_Programing1

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.h  ConsolePrinter.cpp  ConsolePrinter.h  GameManager.cpp  GameManager.h  GameRules.cpp  GameRules.h  GameState.cpp  GameState.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  Point.cpp  Printer.h  ReversiDefaultRules.cpp  ReversiDefaultRules.h  main.cpp  makefile
